salesforce-port/force-app/main/default/objects/Report_Field__c/Report_Field__c.object-meta.xml
<CustomObject>
    <label>Report Field</label>
    <nameField>
        <label>Report Field Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Report Fields</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>