salesforce-port/force-app/main/default/objects/Report_Field__c/fields/Field_Type__c.field-meta.xml
<CustomField>
    <fullName>Field_Type__c</fullName>
    <label>Field Type</label>
    <type>Picklist</type>
    <required>true</required>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Text</fullName><default>true</default><label>Text</label></value>
            <value><fullName>Number</fullName><default>false</default><label>Number</label></value>
            <value><fullName>Date</fullName><default>false</default><label>Date</label></value>
            <value><fullName>Dropdown</fullName><default>false</default><label>Dropdown</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>