salesforce-port/force-app/main/default/objects/Report_Field__c/fields/Options__c.field-meta.xml
<CustomField>
    <fullName>Options__c</fullName>
    <label>Options</label>
    <type>LongTextArea</type>
    <length>32000</length>
</CustomField>