salesforce-port/force-app/main/default/objects/Report_Field__c/fields/Policy__c.field-meta.xml
<CustomField>
    <fullName>Policy__c</fullName>
    <label>Policy</label>
    <type>Lookup</type>
    <referenceTo>Expense_Policy__c</referenceTo>
    <relationshipLabel>Report Fields</relationshipLabel>
    <relationshipName>Report_Fields</relationshipName>
    <deleteConstraint>Restrict</deleteConstraint>
    <required>true</required>
</CustomField>